src/objects/Life_Insurance_Provider__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Life Insurance Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Life Insurance Agent For</relationshipLabel>
        <relationshipName>Life_Insurance_Providers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Customer__c</fullName>
        <label>Life Insurance Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Life Insurance Providers</relationshipLabel>
        <relationshipName>Life_Insurance_Providers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Life Insurance Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Life Insurance Customers</relationshipLabel>
        <relationshipName>Life_Insurance_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Life Insurance Provider</label>
    <nameField>
        <displayFormat>LI-{00000}</displayFormat>
        <label>LI Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Insurance Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>